tests/expectations/compiler/function/17_inputs_fail.out
Error [ETYC0372168]: The entry `bar` has 17 input parameters, which exceeds the allowed limit of 16.
    --> compiler-test:3:8
     |
   3 |     fn bar(
     |        ^^^
     |
     = Consider reducing the number of input parameters. You might combine some parameters into a struct or refactor the {variant} to simplify its signature.
Error [ETYC0372168]: The entry `baz` has 17 input parameters, which exceeds the allowed limit of 16.
    --> compiler-test:26:8
     |
  26 |     fn baz(
     |        ^^^
     |
     = Consider reducing the number of input parameters. You might combine some parameters into a struct or refactor the {variant} to simplify its signature.
